# eleanity

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  eleanity.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  false_result.md  feature_adapter.yml  new_adapter.md  parity_bug.yml
.github/workflows/: auto-version.yml  ci.yml  dependabot-auto-merge.yml  eleanity.yml  nightly.yml  parity-local-ai.yml  parity-public-fixtures.yml  publish.yml  release.yml
docs/: adapter-capabilities.md  api.md  architecture.md  cli.md  evaluation-assessment.md  execution-capsule.md  migration-playbook.md  monorepo-ci.md  observation-trace.md  parity-policies.md  parity-specification.md  scenario-format.md  trace-specification.md
docs/demo/: demo.cast
docs/examples/: first-divergence.md
docs/playbook/: MISSING_ASSISTANT_TURN_TOKEN.md  README.md
docs/rfc/: 0001-what-does-parity-mean.md  0002-what-is-a-baseline.md  0003-when-are-observations-comparable.md  0004-how-should-non-observability-be-reported.md  0005-what-is-the-first-causal-divergence.md  0006-what-makes-a-comparison-reproducible.md
examples/: generate_mock_report.py  report_mock.json
fixtures/public/: chat-templates.yaml  generation-api.yaml  tokenizer-edge.yaml
fixtures/qwen/: scenarios.yaml  tokenizer_torture.yaml
fixtures/real/: tiny-pair.yaml
fixtures/suites/: generic-chat.yaml  tool-calling.yaml
local/: README.md
registry/scenarios/: README.md  catalog.yaml
registry/scenarios/generic/: chat.yaml
scenarios/: basic.yaml  qwen3-14b-local.yaml
schemas/: eleanity-trace-v1.schema.json  observation_trace.schema.json  parity-policy.schema.json  report-v0.schema.json  scenario.schema.json
scripts/ci/: run_local_ai_parity.ps1  run_local_ai_parity.sh
scripts/examples/: demo_template_divergence.py  hf_openai_server.py  mock_openai_diverge.py  run_cross_runtime_demo.py
src/eleanity/: __init__.py  version.py
src/eleanity/adapters/: __init__.py  base.py  fake.py  http.py  llamacpp_adapter.py  ollama_adapter.py  openai_compat.py  registry.py  sdk.py  sglang_adapter.py  tgi_adapter.py  vllm_adapter.py  (+1 more)
tests/contract/: test_adapter_contract.py  test_adapter_methods.py  test_adapter_sdk.py
tests/integration/: test_configured_endpoint_adapters.py  test_degraded_adapters.py
tests/regression/: test_template_diagnosis_format.py  test_template_divergence.py
tests/unit/: test_artifact_diagnosis.py  test_artifact_relevance.py  test_cli.py  test_cli_complete.py  test_coverage_report.py  test_diagnoser.py  test_engine_and_policy.py  test_gates_config_runs.py  test_models_and_comparators.py  test_phase2_diagnostics.py  test_phase_bc.py  test_public_api.py  test_report_and_ci.py  test_requested_layers.py  test_rich_comparators.py  test_rule_diagnoser.py  test_scenario_loader_multidoc.py  test_schema_contracts.py  test_security_guardrails.py  test_spec_foundation.py  test_special_tokens_and_env.py  test_structured_and_api.py  test_tokenizer_only.py
(+78 files in other folders)
