[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "eleanity"
version = "1.1.0"
description = "Same model. Same input. Find the first divergence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Eleanity Contributors" }]
keywords = ["llm", "parity", "diagnostics", "transformers", "vllm", "llama.cpp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13",
  "jinja2>=3.1",
  "httpx>=0.27",
  "packaging>=24",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
transformers = [
  "transformers>=4.45",
  "tokenizers>=0.20",
  "torch>=2.11",
  "accelerate>=0.33",
  "safetensors>=0.4",
]
# These adapters are HTTP clients by default. Keep their server runtimes in a
# separate, least-privilege environment instead of bringing their large
# transitive dependency trees into an Eleanity installation.
vllm = []
llamacpp = []
all = [
  "eleanity[transformers]",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-audit>=2.9",
  "types-PyYAML>=6.0",
  "types-jsonschema>=4.23",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "pip-audit>=2.9",
  "types-PyYAML>=6.0",
  "types-jsonschema>=4.23",
]

[project.scripts]
eleanity = "eleanity.cli.app:app"

[project.urls]
Homepage = "https://github.com/TheusHen/eleanity"
Documentation = "https://github.com/TheusHen/eleanity/tree/main/docs"
Issues = "https://github.com/TheusHen/eleanity/issues"
Repository = "https://github.com/TheusHen/eleanity"
# Planned transfer: https://github.com/eleanity/eleanity (when org exists)

[tool.hatch.build.targets.wheel]
packages = ["src/eleanity"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: optional dependency or network integration",
  "gpu: requires a GPU",
  "slow: long-running model download or inference",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
  "B008",   # Typer/FastAPI Option() defaults are intentional
  "B904",   # raise-without-from: many CLI paths re-raise as Exit
  "SIM102", # nested if often clearer for diagnostic branches
  "SIM117", # nested with for httpx stream is intentional
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/eleanity/reporters/html.py" = ["E501"]  # legacy template builder

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["eleanity"]
ignore_missing_imports = true
